fixed tab header spacing issue

--- a/assets/css/modula-cpt.css
+++ b/assets/css/modula-cpt.css
@@ -111,7 +111,7 @@ tr label.th-label {
 }
 .modula-settings-container .modula-tabs-content .tab-content-header {
 	width: 100%;
-	padding: 16px 20px 15px 20px;
+	padding: 17px 20px 15px 20px;
 	border-bottom: 1px solid #ccd0d4;
     box-sizing: border-box;
     display: flex;
